...
                    isAppearanceLightNavigationBars = !dark
                }
                window.isNavigationBarContrastEnforced = false
            }
            WideColorDisplayProvider {
            MaterialTheme(colorScheme = cridColorScheme(dark), typography = Typography()) {
                    Surface(Modifier.fillMaxSize().testTag("widget_configuration"), color = MaterialTheme.colorScheme.background) {
                        Column(Modifier.fillMaxSize()
                            .windowInsetsPadding(WindowInsets.safeDrawing.union(WindowInsets.ime))) {
                            Column(Modifier.fillMaxSize().verticalScroll(rememberScrollState())
                                .testTag("widget_configuration_scroll")
                                .padding(horizontal = 24.dp).padding(top = 26.dp, bottom = 24.dp),
                                verticalArrangement = Arrangement.spacedBy(24.dp)) {
                                Text(textContext.getString(R.string.platform_widget_theme),
                                    style = MaterialTheme.typography.headlineLarge, fontWeight = FontWeight.Bold,
                                    modifier = Modifier.testTag("widget_configuration_title"))
                                Surface(shape = MaterialTheme.shapes.extraLarge, color = MaterialTheme.colorScheme.surfaceContainerLow) {
...
